<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    app:cardCornerRadius="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        >

    <TextView
        android:id="@+id/titr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/areYouSureSendingMessage"
        android:padding="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        />
    <TextView
        android:id="@+id/textLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="@color/gray_200"
        android:layout_below="@+id/titr"
        android:layout_marginBottom="16dp"
        />
    <Button
        android:id="@+id/realtive_dialog_sne_message_btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textLine"
        android:text="@string/yesSending"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_white_shadow_gray"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="8dp"
        />
    <Button
        android:id="@+id/realtive_dialog_sne_message_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textLine"
        android:text="@string/noBack"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_white_shadow_gray"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginBottom="8dp"
        />
    </RelativeLayout>
</android.support.v7.widget.CardView>