<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_200">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:src="@drawable/yoga_logo" />

<RelativeLayout
    android:layout_above="@+id/cardview"
    android:layout_width="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_height="wrap_content">
    <TextView
        android:padding="10dp"
        android:visibility="gone"
        android:id="@+id/membership_service_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"



        android:text="@string/membershipPrice"
        android:textColor="#000" />
</RelativeLayout>
    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/white">



        <EditText
            android:id="@+id/txt_subscribe_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/hint_mobile2"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"

            >

        </EditText>
    </android.support.v7.widget.CardView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cardview"
        android:layout_marginTop="38dp"
        android:background="@drawable/gradiant2" />

    <Button
        android:id="@+id/fragment_register_Btn_register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/cardview"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/gradiant"
        android:text="@string/accept"
        android:textColor="@color/white"
        android:textSize="15sp">

    </Button>

    <TextView
        android:padding="10dp"
        android:visibility="invisible"
        android:id="@+id/accept_service_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_register_Btn_register"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/acceptService"
        android:textColor="#02508F" />

    <ProgressBar
        android:id="@+id/progressRegister"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:visibility="invisible" />

</RelativeLayout>
