<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_200">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:src="@drawable/yoga_logo" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/white">

        <EditText
            android:id="@+id/fragment_codeRequest_editCodeRequest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/hint_requestCode"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:textColor="@color/black"
            android:textSize="14sp">

            <requestFocus />
        </EditText>
    </android.support.v7.widget.CardView>



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cardview"
        android:layout_marginTop="38dp"
        android:background="@drawable/gradiant2" />

    <Button
        android:id="@+id/fragment_register_Btn_register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/cardview"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradiant"
        android:text="@string/realRequestCode"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/btn_back_to_subscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/dontGiveRequestCode"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold"></TextView>

</RelativeLayout>
