<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backColor"

    >
       <include layout="@layout/header_image_titr"
           android:id="@+id/include" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/linearInput"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/curve_bg_white"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:gravity="center"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/mobile"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    />

                <EditText
                    android:id="@+id/fragment_login_EditMobile"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_mobile"
                    android:inputType="phone"
                    android:background="@android:color/transparent"
                    android:layout_weight="8"
                    android:gravity="start|center"
                    android:maxLength="11"
                    android:paddingTop="8dp"
                    android:textColor="@color/gray_500"
                    />


            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_200" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            >

            <RelativeLayout
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:id="@+id/imageView"
                android:layout_marginLeft="5dp">
                <ImageView
                    android:id="@+id/fragment_login_imageLock"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/lock"
                    />
                <ImageView
                    android:id="@+id/fragment_login_imageEye"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/eye"
                    android:visibility="invisible"
                    android:tint="@color/colorAccent"
                    />
            </RelativeLayout>

            <EditText
                    android:id="@+id/fragment_login_EditPassword"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:layout_weight="8"
                    android:gravity="start|center"
                    android:maxLength="11"
                    android:textColor="@color/gray_500"
                    />


        </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/fragment_login_forgottenPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgottenPassword"
            android:layout_below="@+id/linearInput"
            android:layout_alignRight="@+id/linearInput"
            android:layout_marginTop="16dp"
            android:textSize="10sp"
            android:layout_marginRight="8dp"
            />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_alignRight="@id/linearInput"
    android:layout_alignLeft="@id/linearInput"
    android:gravity="center"
    android:layout_below="@+id/fragment_login_forgottenPassword"
    android:layout_marginTop="32dp"
    >

    <Button
        android:id="@+id/fragment_login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/login"
        android:background="@drawable/curve_bg_purple"
        android:gravity="center"
        android:textSize="12sp"
        android:layout_weight="1"
        android:textColor="@color/white"
        />

    <android.support.v4.widget.Space
        android:layout_width="8dp"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/fragment_login_btn_register"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/register"
        android:layout_below="@+id/fragment_login_forgottenPassword"
        android:background="@drawable/curve_bg_purple"
        android:gravity="center"
        android:textSize="12sp"
        android:layout_weight="1"
        android:textColor="@color/white"
        />
</LinearLayout>


    </RelativeLayout>

</RelativeLayout>