<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/fragment_main_toolbar"
        android:background="@drawable/gradiant3"
                >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <RelativeLayout
                android:id="@+id/fragment_yoga_category_badani"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <ImageView
                    android:id="@+id/image_menu1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/menu5"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="16dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/body_movement"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="8dp"
                    android:layout_below="@+id/image_menu1"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/fragment_yoga_category_amadegi"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <ImageView
                    android:id="@+id/image_menu2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/menu6"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="16dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/readiness"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="8dp"
                    android:layout_below="@+id/image_menu2"
                    />
            </RelativeLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <RelativeLayout
                android:id="@+id/fragment_yoga_category_paksazi"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <ImageView
                    android:id="@+id/image_menu3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/menu3"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="16dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clearing"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="8dp"
                    android:layout_below="@+id/image_menu3"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/fragment_yoga_category_asana"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <ImageView
                    android:id="@+id/image_menu4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/menu4"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="16dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/asana"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="8dp"
                    android:layout_below="@+id/image_menu4"
                    />
            </RelativeLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/blue"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <RelativeLayout
                android:id="@+id/fragment_yoga_category_sikl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <ImageView
                    android:id="@+id/image_menu5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/menu2"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="16dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cycle"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="8dp"
                    android:layout_below="@+id/image_menu5"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/fragment_yoga_category_zen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <ImageView
                    android:id="@+id/image_menu6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/menu1"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="16dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zen"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="8dp"
                    android:layout_below="@+id/image_menu6"
                    />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>